# pyTRACK

./: .readthedocs.yaml  LICENSE  README.md  manifest.in  pyproject.toml  requirements.txt  setup.py
.github/: publish.yml
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  contrib.rst  core.rst  functions.rst  index.rst  installation.rst  intoduction.rst  pyTRACK.rst  statistics.rst  tracking.rst
pyTRACK/: __init__.py  stats.py  track.py  track_master.py  track_uv.py  utils.py
pyTRACK/_lib/: _dummy_extension.c
pyTRACK/data/: gridT63.nc
pyTRACK/indat/: RUNDATIN.VOR.in  RUNDATIN.VOR_A.in  STATS_template_area.in  STATS_template_unsmooth.in  calcvor_onelev.in  tr2nc.meta.elinor
src/: Makefile
src/TRACK-1.5.2/: Makefile_linux.in
src/TRACK-1.5.2/.hg/: dirstate  shamap  undo.desc  undo.dirstate
src/TRACK-1.5.2/.hg/cache/: branchheads  tags
src/TRACK-1.5.2/.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo  undo.phaseroots
src/TRACK-1.5.2/include/: file_cat_out.in  file_path.in  files_in.in  files_out.in
src/TRACK-1.5.2/src/: Makefile.linux  additional_fields.c  convert.c  extract.c  fast_spectral_filter.c  lanczos_create.c  least_sq_nm.c  limited_area_filter.c  mge_tracks.c  parse_com.c  run_means.c  sp_kernal_estimate.c  spec_filt.c  spectral_filter.c  splice.c  spline_smooth.c  sqt_eval_stat.c  statistic.c  tendency.c  threshold.c  time_avg.c  time_filt.c  track.c  track_merge.c  track_sample_dev.c  wtm_combine.c
src/TRACK-1.5.2/utils/: Makefile
test/: test.py
tests/: test_load.py
(+806 files in other folders)
