[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyTRACK"
version = "0.1.0"
description = "Python wrapper for the TRACK tracking system"
authors = [
    { name = "Abel Shibu", email = "abels2000@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["pyTRACK"]

[tool.setuptools.package-data]
pyTRACK = [
    "_lib/*.so",
    "data/**",
    "indat/**"
]
