[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TRACK-pylib"
version = "0.4.0"
description = "Python-wrapped implementation of the TRACK software"
authors = [
    { name = "Abel Shibu", email = "abels2000@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "netCDF4",
    "xarray",
    "tqdm"
]

[tool.setuptools]
packages = ["pyTRACK"]

[tool.setuptools.package-data]
pyTRACK = [
    "_lib/*.so",
    "data/**",
    "indat/**"
]
